--- a/project_without_a_soul/composer.json
+++ b/project_without_a_soul/composer.json
@@ -4,7 +4,8 @@
     "license": "MIT",
     "autoload": {
         "files": [
-            "src/models/Product.php"
+            "src/models/Product.php",
+            "src/models/User.php"
         ],
         "psr-4": {
             "Admin\\ProjectWithoutASoul\\": "src/"
